--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-product-section.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-product-section.scss
@@ -19,17 +19,13 @@ main {
 
     li.product-list-item {
       display: inline-block;
-      float: none;
+      float: none !important;
       font-size: 16px;
       margin: 0;
       margin-bottom: 30px;
       padding: 0 15px;
       vertical-align: top;
-      width: 25%;
-
-      @include max-screen($mq-tablet) {
-        padding: 0 20px;
-      }
+      width: 25%;      
 
       .product-info-cntr {
         margin-top: 20px;
@@ -65,7 +61,38 @@ main {
     height: 200px;
   }
   .star-rating {
+    position: relative;
     left: 50%;
     transform: translatex(-50%);
+  }
+
+  @include max-screen($mq-tablet) {
+    ul.products {
+      padding: 0 10px;
+    }
+    li.product-list-item{
+      padding: 0 10px;
+      margin-bottom: 20px;
+    }
+  }
+
+  @include max-screen($mq-mobile) {
+    ul.products{
+      li.product-list-item{
+        width: 50%;
+      }
+    }  
+    .product-image-cntr .product-image {
+      height: 0;
+      padding-bottom: 65%;
+    }  
+  }
+
+  @include max-screen($mq-sm-mobile) {
+    ul.products{
+      li.product-list-item{
+        width: 100%;
+      }
+    } 
   }
 }
