--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
@@ -36,11 +36,11 @@
 
     h1 {
       font-size: 20px;
-      font-weight: bolder;
-      // margin-top: 15px;
+      font-weight: bolder;      
 
       img {
-        max-width: 150px; margin-top:10px;
+        max-width: 150px; 
+        margin-top:10px;
       }
     }
   }
