--- a/wp-content/themes/gsn/work-assests/scss/components/_global.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_global.scss
@@ -100,6 +100,11 @@ label.error {
   align-items: center;
   height: 100vh;
 }
+.modal-open{  
+  .screen-reader-text {
+    display: none;
+  }
+}
 
 .desktop {
   display: block;
