--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
@@ -34,12 +34,16 @@
   &__logo {
     text-transform: uppercase;
 
+    @include max-screen($mq-mobile) {
+      float: left;
+    }
+
     h1 {
       font-size: 20px;
       font-weight: bolder;      
 
       img {
-        max-width: 150px; 
+        max-width: 100px; 
         margin-top:10px;
       }
     }
@@ -182,6 +186,7 @@
 @include max-screen($mq-mobile) {
   .header__main-items {
     position: static;
+    float: right;
   }
   .main-nav {
     position: absolute;
@@ -425,23 +430,21 @@
 // /.search
 
 
-// theme hamburger
+// hamburger
 .hamburger-icon {
-  width: 45px;
-  height: 22px;
+  width: 30px;
+  height: 18px;
   position: relative;
   display: block;  
 
   .line {
     display: block;
-    background: $black;
-    width: 100%;
-    height: 4px;
+    background: $white;
+    width: 30px;
+    height: 2px;
     position: absolute;
     left: 0;
     transition: all 0.3s;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
 
     &.line-1 {
       top: 0;
@@ -456,13 +459,13 @@
 
   &.active {
     .line-1 {
-      transform: translateY(13px) translateX(0) rotate(45deg);
+      transform: translateY(9px) translateX(0) rotate(45deg);
     }
     .line-2 {
       opacity: 0;
     }
     .line-3 {
-      transform: translateY(-13px) translateX(0) rotate(-45deg);
+      transform: translateY(-9px) translateX(0) rotate(-45deg);
     }
   }
 }
@@ -471,5 +474,9 @@
   position: absolute;
   right: 20px;
   top: 50%;
-  margin-top: -12px;
+  transform: translateY(-50%);
+
+  .line {
+    background: $black;
+  }
 }
