--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
@@ -1,5 +1,9 @@
 .main-content {
   margin-top: 100px;
+
+  @include max-screen($mq-mobile) {
+    margin-top: 80px;
+  }
 }
 .hero-section {
   margin-bottom: 50px;
