few changes for responsive

--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
@@ -257,6 +257,7 @@
       display: none;
       background: $white;
       border-top: 2px solid $black;
+      overflow-y: scroll;
     }
   }
   .nav__links {
