--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-footer.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-footer.scss
@@ -93,6 +93,10 @@
       background: $petal_green;
     }
   }
+
+  @include max-screen($mq-mobile) {
+    right: 20px;
+  }
 }
 
 .fb-messengermessageus.fb_iframe_widget {
