--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
@@ -1,7 +1,7 @@
 .dashboard-main-cntr {
   padding-top: 100px;
   padding-bottom: 50px;
-  display: flex;  
+  // display: flex;  
 
   h3 {
     text-transform: uppercase;
@@ -37,71 +37,107 @@
     min-height: 100px;
   }
 
-  .dashboard__main-content {
-    width: auto;
-    flex-grow: 1;
-  }
-
   .dashboard__info-content {
-    width: 350px;    
-    background: $light_gray;
-    color: $dark_gray;
-    margin-top: -40px;
-    padding: 15px;
-
-    h3 {
-      margin-left: 0;
-      margin-right: 0;
-      margin-bottom: 20px;
-    }
+    background: #ececec;
+    margin-bottom: 30px;
+    padding: 30px 20px;
 
     h5 {
-      font-size: 16px;
-      padding-bottom: 3px;            
-      margin-bottom: 5px;
-      a {
-        border-bottom: 1px solid $dark_gray;
-        padding-bottom: 3px;
+      margin-bottom: 15px;
 
-        &:hover {
-          color: $brick_red;
-          border-color: $brick_red;
-        }
-      }
       span {
         text-transform: uppercase;
-        display: inline-block;
-        border-bottom: 2px solid $dark_gray;
+        font-weight: bold;
       }
     }
+    .plan-info--user {      
 
-    .plan__user {
-      padding-bottom: 15px;
-      border-bottom: 2px solid $dark_gray;
-    }
-
-    ul {
       li {
-        display: block;
-        margin-bottom: 3px;
-        line-height: 1;
+        margin-right: 6px;
+        background: #b5b5b5;
+        padding: 5px 15px;
+        color: $white;
+        margin-bottom: 15px;
 
         span {
           font-weight: bold;
-          color: $brick_red;
+          text-transform: uppercase;
+          color: $black;
           display: inline-block;
-          margin-right: 6px;
+          margin-left: 5px;
         }
       }
     }
-    
-    .plan__upgrade-wrapper {
-      margin-top: 15px;
-    }
-    .plan__upgrade {
-      margin-top: 15px;
+    .user__upgrade--btn {
+
     }
   }
+
+  // .dashboard__main-content {
+  //   width: auto;
+  //   flex-grow: 1;
+  // }
+
+  // .dashboard__info-content {
+  //   width: 350px;    
+  //   background: $light_gray;
+  //   color: $dark_gray;
+  //   margin-top: -40px;
+  //   padding: 15px;
+
+  //   h3 {
+  //     margin-left: 0;
+  //     margin-right: 0;
+  //     margin-bottom: 20px;
+  //   }
+
+  //   h5 {
+  //     font-size: 16px;
+  //     padding-bottom: 3px;            
+  //     margin-bottom: 5px;
+  //     a {
+  //       border-bottom: 1px solid $dark_gray;
+  //       padding-bottom: 3px;
+
+  //       &:hover {
+  //         color: $brick_red;
+  //         border-color: $brick_red;
+  //       }
+  //     }
+  //     span {
+  //       text-transform: uppercase;
+  //       display: inline-block;
+  //       border-bottom: 2px solid $dark_gray;
+  //     }
+  //   }
+
+  //   .plan__user {
+  //     padding-bottom: 15px;
+  //     border-bottom: 2px solid $dark_gray;
+  //   }
+
+  //   ul {
+  //     li {
+  //       display: block;
+  //       margin-bottom: 3px;
+  //       line-height: 1;
+
+  //       span {
+  //         font-weight: bold;
+  //         color: $brick_red;
+  //         display: inline-block;
+  //         margin-right: 6px;
+  //       }
+  //     }
+  //   }
+    
+  //   .plan__upgrade-wrapper {
+  //     margin-top: 15px;
+  //   }
+  //   .plan__upgrade {
+  //     margin-top: 15px;
+  //   }
+  // }
 }
 .dashboard-title {
   text-transform: uppercase;
