--- a/wp-content/themes/gsn/work-assets/scss/theme/components/_landing.scss
+++ b/wp-content/themes/gsn/work-assets/scss/theme/components/_landing.scss
@@ -91,7 +91,7 @@ body.page-template-register {
   will-change: transform;
 }
 #logo-shadow {
-  background: url(../images/main-logo-plain.svg) center center no-repeat;
+  background: url(../../images/main-logo-plain.svg) center center no-repeat;
   background-size: 90% 100%;
   -webkit-filter: url(#shadow);
   filter: url(#shadow);
