Landing JS files further refactored

--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_global.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_global.scss
@@ -1,13 +1,20 @@
 body {
-  font-size: 14px;  
+  font-size: 14px;
 }
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
 a {
   display: inline-block;
 }
-a, a:hover, a:focus {
+a,
+a:hover,
+a:focus {
   color: inherit;
   outline: none;
   text-decoration: none;
@@ -24,7 +31,12 @@ li {
 select {
   outline: 0;
 }
-.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
+.btn.active.focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn:active:focus,
+.btn:focus {
   outline: none;
 }
 .page-title {
@@ -71,10 +83,10 @@ label.error {
   padding: 0 15px;
 }
 .pl0 {
-  padding-left: 0
+  padding-left: 0;
 }
 .pr0 {
-  padding-right: 0
+  padding-right: 0;
 }
 .mb15 {
   margin-bottom: 15px;
@@ -100,7 +112,7 @@ label.error {
   align-items: center;
   height: 100vh;
 }
-.modal-open{  
+.modal-open {
   .screen-reader-text {
     display: none;
   }
@@ -135,7 +147,7 @@ label.error {
     width: 100%;
     padding: 0 20px;
   }
-  [class*='col-'] {
+  [class*="col-"] {
     padding: 0 20px;
   }
   .row {
@@ -147,7 +159,7 @@ label.error {
   .dashboard-forms-main-cntr {
     margin: 0 -10px;
 
-    [class*='col-'] {
+    [class*="col-"] {
       padding: 0 10px;
     }
     .pl0 {
@@ -156,14 +168,14 @@ label.error {
     .pr0 {
       padding-right: 0;
     }
-  } 
+  }
 }
 
 @include max-screen($mq-mobile) {
   .dashboard-forms-main-cntr {
     margin: 0 -10px;
 
-    [class*='col-'] {
+    [class*="col-"] {
       display: block;
       width: auto;
       float: none;
@@ -172,7 +184,8 @@ label.error {
       padding-right: 0;
       margin-bottom: 10px;
     }
-    .pl0, .pr0 {
+    .pl0,
+    .pr0 {
       padding: 0;
     }
   }
