--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_landing.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_landing.scss
@@ -16,10 +16,11 @@ body.page-template-register {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    height: 100vh;
 
     @include max-screen($mq-tablet) {
-      position: fixed;
-      height: auto !important;
+      // position: fixed;
+      // height: auto !important;
     }
   }
 
@@ -62,7 +63,8 @@ body.page-template-register {
       }
     }
 
-    &__main, &__shadow {
+    &__main,
+    &__shadow {
       position: absolute;
       top: 0;
       left: 0;
@@ -120,7 +122,7 @@ body.page-template-register {
 
       &.js-about-section {
         background: $brick_red;
-        
+
         .gsn-landing__close__fwrap {
           bottom: auto;
           top: 20px;
@@ -164,7 +166,7 @@ body.page-template-register {
           &:hover {
             color: $black;
           }
-        }        
+        }
       }
     }
   }
@@ -195,7 +197,7 @@ body.page-template-register {
       animation-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
       animation-delay: 0s;
       animation-fill-mode: forwards;
-      
+
       &.js-open-form {
         animation-name: cover;
       }
@@ -204,7 +206,7 @@ body.page-template-register {
         background: $petal_green;
         animation-name: wipeRight;
       }
-      
+
       &.js-wipe-slide {
         background: $petal_green;
         animation-name: wipeSlide;
@@ -223,7 +225,7 @@ body.page-template-register {
       @include max-screen($mq-sm-mobile) {
         width: 280px;
       }
-    
+
       &.js-move-up {
         bottom: 20px;
       }
@@ -258,7 +260,7 @@ body.page-template-register {
       @include min-screen($mq-min-mobile) {
         &:hover {
           color: $white;
-        }        
+        }
       }
     }
   }
@@ -268,7 +270,7 @@ body.page-template-register {
       position: fixed;
       top: 20px;
       right: -100%;
-      transition: all 350ms cubic-bezier(.77,0,.175,1);
+      transition: all 350ms cubic-bezier(0.77, 0, 0.175, 1);
 
       &.js-move-right {
         right: 20px;
@@ -357,22 +359,22 @@ body.page-template-register {
         overflow-y: auto;
         transform: translateX(0) translateY(40%);
       }
-  
+
       &.js-forms-active {
         transition-delay: 0s;
         transition: all 0.2s ease-in-out;
       }
-  
+
       &.js-opened {
         opacity: 1;
         visibility: visible;
         transform: translateX(-50%) translateY(-50%);
-  
+
         @include max-screen($mq-sm-mobile) {
           transform: translateX(0) translateY(0);
         }
       }
-  
+
       &.js-closing {
         opacity: 1;
         visibility: visible;
@@ -417,11 +419,12 @@ body.page-template-register {
 
     &.js-open-modal {
       z-index: 999;
-      
+
       .gsn-landing-lmodal__content {
         visibility: visible;
         opacity: 1;
-        transition: opacity 350ms ease-in-out, visibility 350ms ease-in-out, transform 500ms cubic-bezier(0.68, -0.165, 0.265, 1.55);
+        transition: opacity 350ms ease-in-out, visibility 350ms ease-in-out,
+          transform 500ms cubic-bezier(0.68, -0.165, 0.265, 1.55);
         transform: translate(-50%, -50%) scale(1);
       }
     }
@@ -439,7 +442,8 @@ body.page-template-register {
       left: 50%;
       transform: translate(-50%, -50%) scale(0.8);
       box-shadow: 0px 4px 5px 0px rgba(56, 56, 56, 0.5);
-      transition: transform 350ms cubic-bezier(0.68, -0.55, 0.265, 1.18), opacity 500ms ease-out, visibility 500ms ease-out;
+      transition: transform 350ms cubic-bezier(0.68, -0.55, 0.265, 1.18),
+        opacity 500ms ease-out, visibility 500ms ease-out;
 
       @include max-screen($mq-sm-mobile) {
         width: 100%;
@@ -449,7 +453,7 @@ body.page-template-register {
     &__heading {
       padding-bottom: 6px;
       border-bottom: 1px solid $black;
-        
+
       h4 {
         text-transform: uppercase;
         font-size: 18px;
@@ -475,13 +479,13 @@ body.page-template-register {
 
       .form-group {
         margin-bottom: 0;
-  
+
         #selected_location_label {
           font-weight: bold;
           margin-left: 5px;
         }
       }
-  
+
       #pac-input {
         margin-left: 0;
         margin-top: 10px;
