--- a/wp-content/themes/gsn/work-assets/scss/COMMON-STYLES-DEFINATIONS/base/_variable.scss
+++ b/wp-content/themes/gsn/work-assets/scss/COMMON-STYLES-DEFINATIONS/base/_variable.scss
@@ -12,8 +12,6 @@ $mq-min-mobile: 801px;
 $mq-min-sm-mobile: 601px;
 
 
-
-
 /**
  * Define colors
  */
@@ -40,6 +38,7 @@ $dark_blue:#232429;
 $black: #000;
 $white: #fff;
 $gray: #444444;
+$yellow: #ff0;
 $dark__gray: #252525;
 $white_smoke: #f5f5f5;
 $rating_color: #ffae00;
