--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_global.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_global.scss
@@ -14,18 +14,19 @@ a {
 }
 a,
 a:hover,
-a:focus {
-  color: inherit;
+a:focus {  
   outline: none;
   text-decoration: none;
-  transition: all 0.3s ease;
+  @include transition;
 }
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
+  font-size: 0;
 }
 li {
+  font-size: rem(16px);
   display: inline-block;
 }
 select {
