--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_landing.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_landing.scss
@@ -159,19 +159,28 @@ body.page-template-register {
       text-align: center;
 
       a {
-        text-transform: uppercase;
-        color: yellow;
-
-        @include min-screen($mq-min-mobile) {
-          &:hover {
-            color: $black;
-          }
-        }
+        @include inline-anchor($yellow, 'uppercase');
       }
     }
   }
 
   &__about {
+    &__lwrap {
+      position: fixed;
+      top: 20px;
+      right: -100%;
+      @include transition;
+
+      &.js-move-right {
+        right: 20px;
+      }
+    }
+
+    &__link {
+      font-size: 16px;
+      @include inline-anchor($white, 'uppercase');
+    }
+
     &__content {
       margin-top: 20px;
       line-height: 26px;
@@ -220,7 +229,7 @@ body.page-template-register {
       bottom: -100%;
       width: 350px;
       z-index: 9;
-      transition: all 350ms cubic-bezier(0.77, 0, 0.175, 1);
+      @include transition;
 
       @include max-screen($mq-sm-mobile) {
         width: 280px;
@@ -235,13 +244,11 @@ body.page-template-register {
       border-bottom: none;
     }
 
-    &__item {
-      display: inline-block;
-      float: left;
+    &__item {      
       text-align: center;
       width: 50%;
       background: $darker__gray;
-      transition: all 0.3s ease-in;
+      @include transition;
 
       @include min-screen($mq-min-mobile) {
         &:hover {
@@ -260,31 +267,6 @@ body.page-template-register {
       @include min-screen($mq-min-mobile) {
         &:hover {
           color: $white;
-        }
-      }
-    }
-  }
-
-  &__about {
-    &__lwrap {
-      position: fixed;
-      top: 20px;
-      right: -100%;
-      transition: all 350ms cubic-bezier(0.77, 0, 0.175, 1);
-
-      &.js-move-right {
-        right: 20px;
-      }
-    }
-
-    &__link {
-      text-transform: uppercase;
-      color: $white;
-      font-size: 16px;
-
-      @include min-screen($mq-min-mobile) {
-        &:hover {
-          color: $petal-green;
         }
       }
     }
