Added new header and footer for Home Page and seperated rquired files

--- a/wp-content/themes/gsn/work-assets/scss/theme/style.scss
+++ b/wp-content/themes/gsn/work-assets/scss/theme/style.scss
@@ -14,6 +14,8 @@
 /* ====== Import COMPONENT CSS END ====== */
 
 /* ====== Theme Styles CSS ====== */
+@import "theme/theme-header";
+@import "theme/theme-footer";
 @import "theme/theme-hero";
 @import "theme/theme-product-section";
 @import "theme/theme-category-page";
